--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="snow_white">#F3F6FB</color>
+    <color name="green">#12C700</color>
+    <color name="red">#E54304</color>
+    <color name="yellow">#FFC107</color>
 </resources>
